Fix padding and gap

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ table {
 svg {
     width: 24px;
     height: 24px;
-	vertical-align: -4px;
+	vertical-align: -5px;
 }
 svg path {
     fill: black;
@@ -128,6 +128,7 @@ img {
 	display: grid;
 	grid-template-columns: 3fr 1fr;
 	grid-template-rows: auto auto;
+	gap: 10px;
 	padding: 15px;
 	box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.25);
 	z-index: 2;
@@ -169,6 +170,10 @@ img {
 	grid-row: 1 / 3;
 	height: 80px;
 	width: 80px;
+}
+
+.user-info>.name-info {
+	padding-top: 10px;
 }
 
 .sorting {
